# link-rot-scanner

./: README.md  pyproject.toml
src/link_rot_scanner/: __init__.py  __main__.py  anchors.py  checker.py  cli.py  models.py  parser.py  report.py  scanner.py
tests/: test_parser.py  test_scanner.py
