[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "link-rot-scanner"
version = "0.1.0"
description = "A fast CLI for finding broken Markdown links, local file references, and missing anchors."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Mert Efe Kurt" }]
keywords = ["markdown", "links", "documentation", "cli", "audit"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Documentation",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.scripts]
link-rot-scanner = "link_rot_scanner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/link_rot_scanner"]
